Added test case for subordinate transactions in implicitly demarcated contexts